# packets.py

./: .gitignore  LICENSE  ReadMe.md  setup.cfg  setup.py
packets/: __init__.py  _fieldbase.py  _fieldinfo.py  _fieldprocessorbase.py  _json.py  _packetbase.py  _types.py  _util.py  field.py  packet.py
packets/processors/: __init__.py  _base.py  _types.py  array.py  base.py  bitmask.py  boolean.py  bytes.py  const.py  date.py  enumeration.py  hash.py  loglevels.py  numeric.py  obj.py  set.py  string.py  subpacket.py  tuple.py  variant.py  zippacked.py
packets/typedef/: any_t.py  bool_t.py  bytes_t.py  double_t.py  float_t.py  int16_t.py  int32_t.py  int64_t.py  int8_t.py  int_t.py  loglevel_t.py  long_t.py  object_t.py  percent_t.py  str_date_t.py  str_date_unixtime_t.py  str_datetime_t.py  str_datetime_z_t.py  str_int_t.py  str_time_t.py  str_unixtime_t.py  string_t.py  uint16_t.py  uint32_t.py  uint64_t.py  uint8_t.py  uint_t.py  unixtime_t.py
tests/: __init__.py  bench.py  profile.py  test_diff.py  test_field_descriptor.py  test_packets.py  test_partial.py  test_processors.py
