[metadata]
name = packets
version = attr: packets.__version__
author = Vladimir Berezenko
author_email = qmaster2000@gmail.com
description = Packets system for serialization/deserialization.
license = MIT
keywords =
    packets
    serialization
    deserialization
    dictionary
    application
    developer
    validation
    json

url = https://github.com/Q-Master/packets.py
long_description = file: ReadMe.md
long_description_content_type = text/x-md
classifiers =
    Development Status :: 5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = find:
install_requires =
    ujson

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
norecursedirs = .* *.egg *.egg-info bin dist include lib local share static docs
python_files = tests/test_*.py
